<resources>
    <string name="app_name">DemoTp8</string>
    <string name="btn_name">Click Here</string>
    <string name="cancel">Cancel</string>
    <string name="rate_us">Rate Us</string>
    <string name="enter_your_country_name">Enter Your Country Name</string>
    <string name="enter_multiple_country_names">Enter Multiple Country Names.</string>
    <string name="submit">Submit</string>
    <string name="show_data">Clear Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_to_fragment">Send To Fragment</string>
    <string name="add">Add</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="pop">Pop</string>
    <string name="login_signup">Login SignUp</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_up">SIGN UP</string>
    <string name="enter_username">Enter Username!!</string>
    <string name="enter_password">Enter Password!!</string>
    <string name="login_name">LOGIN</string>
    <string name="start">Start</string>
    <string name="email_id">Email Id</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="count">Count</string>
    <string name="_1">1</string>
    <string name="custom_notification">Custom Notification</string>
    <string name="notification_body">Notification Body</string>
    <string name="notification_description">Notification Description</string>
    <string name="notification_value">Notification Value</string>
</resources>