<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.activities.FragmentOperationsActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"

        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toStartOf="@+id/replace_fragment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/replace_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replace"

        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toStartOf="@+id/remove_fragment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_fragment"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"

        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toStartOf="@+id/pop_fragment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/replace_fragment"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pop_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop"

        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/remove_fragment"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.circularreveal.CircularRevealFrameLayout
        android:id="@+id/fl_operations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_fragment"/>
</androidx.constraintlayout.widget.ConstraintLayout>