<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/custom_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_shap">

                <ImageView
                    android:id="@+id/notification_image"
                    android:src="@drawable/notification"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/notification_value" />

                <TextView
                    android:id="@+id/notification_body"
                    android:text="@string/notification_body"
                    android:textSize="13sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/notification_description"
                    android:text="@string/notification_description"
                    android:textSize="11sp"
                    android:textStyle="normal"
                    android:textColor="@color/white"
                    android:layout_marginStart="55dp"
                    android:layout_marginEnd="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/notification_body"/>

    </RelativeLayout>