<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myViewModel"
            type="com.chetu.demotp8.mvvm.model.UserData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvvm.dataBinding.DataBindingViewModelActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_lt"
            android:layout_marginTop="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name"
                android:hint="@string/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_lt"
            android:layout_marginTop="30sp"
            app:layout_constraintTop_toBottomOf="@id/first_name_lt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name"
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_id_lt"
            android:layout_marginTop="30sp"
            app:layout_constraintTop_toBottomOf="@id/last_name_lt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_id"
                android:hint="@string/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            android:text="@string/submit"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="40dp"
            android:layout_marginTop="40sp"
            android:layout_marginHorizontal="110dp"
            app:layout_constraintTop_toBottomOf="@id/email_id_lt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            android:textSize="25sp"
            android:text="@{myViewModel.FName+' '+myViewModel.LName}"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/submit_btn"
            app:layout_constraintBottom_toBottomOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_email"
            android:textSize="25sp"
            android:text="@{myViewModel.email}"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>