<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.fragments.FragmentSignUp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="40dp"
        app:cardElevation="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_signup_design">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signUp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:textColorHighlight="@color/image_card_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/signUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:counterEnabled="true"
                app:passwordToggleTint="@color/black"
                app:startIconDrawable="@drawable/username"
                app:helperText="*required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                android:nextFocusDown="@id/signUp"
                app:counterMaxLength="50"
                app:counterTextColor="@color/purple_200"
                app:endIconMode="clear_text"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/username_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:maxLength="50"
                    android:hint="@string/enter_username"
                    android:inputType="textWebEmailAddress"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/username_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:counterEnabled="true"
                app:startIconDrawable="@drawable/password"
                app:helperText="*required"
                app:helperTextEnabled="true"
                app:passwordToggleTint="@color/black"
                app:helperTextTextColor="@color/red"
                android:nextFocusDown="@id/username_card"
                app:counterMaxLength="30"
                app:counterTextColor="@color/purple_200"
                app:endIconMode="password_toggle"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/password_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:maxLength="30"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/password_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:counterEnabled="true"
                app:startIconDrawable="@drawable/password"
                app:helperText="*required"
                app:helperTextEnabled="true"
                app:passwordToggleTint="@color/black"
                app:passwordToggleEnabled="true"
                app:helperTextTextColor="@color/red"
                android:nextFocusDown="@id/password_card"
                app:counterMaxLength="30"
                app:counterTextColor="@color/purple_200"
                app:endIconMode="clear_text"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/confirm_password_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:maxLength="30"
                    android:hint="@string/enter_password"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUp_btn"
                android:text="@string/sign_up"
                android:textSize="30sp"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="40dp"
                app:layout_constraintVertical_chainStyle="packed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_card"
                app:cornerRadius="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="40dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>